[gd_scene load_steps=16 format=2]

[ext_resource path="res://Enemy/Mobs/Bat/State/Dead.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Mobs/Bat/State/ProcessHit.gd" type="Script" id=2]
[ext_resource path="res://Enemy/Mobs/Bat/CaveBat/CaveBat.gd" type="Script" id=3]
[ext_resource path="res://Enemy/Mobs/Bat/State/Patrol.gd" type="Script" id=4]
[ext_resource path="res://Enemy/Mobs/Bat/State/Hit.gd" type="Script" id=5]
[ext_resource path="res://Enemy/Mobs/MobHealth/HealthBarMob.tscn" type="PackedScene" id=6]
[ext_resource path="res://Enemy/Mobs/Bat/State/Search.gd" type="Script" id=7]
[ext_resource path="res://Enemy/Mobs/Bat/State/Attack.gd" type="Script" id=8]
[ext_resource path="res://Enemy/Mobs/Bat/CaveBat/CaveBat.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 2 )

[sub_resource type="Animation" id=2]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 201, 1, 48, 48 ), Rect2( 251, 1, 48, 48 ), Rect2( 301, 1, 48, 48 ), Rect2( 351, 1, 48, 48 ), Rect2( 401, 1, 48, 32 ), Rect2( 451, 1, 48, 32 ), Rect2( 501, 1, 48, 32 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotate/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 8 ), Vector2( 0, 8 ), Vector2( 0, 8 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rotate/Sprite:region_rect")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Rect2( 1, 1, 48, 48 ), Rect2( 51, 1, 48, 48 ), Rect2( 101, 1, 48, 48 ), Rect2( 151, 1, 48, 48 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Rotate/Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
height = 30.0

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 5, 1 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.0
height = 4.0

[node name="CaveBat" type="KinematicBody2D" groups=[
"Enemy",
]]
scale = Vector2( 16, 16 )
collision_layer = 8
script = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -3.1 )
scale = Vector2( 0.5, 1.7 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Rotate" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Rotate"]
position = Vector2( 0, -3 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 9 )
region_enabled = true
region_rect = Rect2( 1, 1, 48, 48 )
__meta__ = {
"_edit_lock_": true
}

[node name="RayDown" type="RayCast2D" parent="Rotate"]
visible = false
position = Vector2( 2.1, -1 )
enabled = true
cast_to = Vector2( 0, 2 )
collide_with_areas = true
__meta__ = {
"_edit_lock_": true
}

[node name="RayFront" type="RayCast2D" parent="Rotate"]
visible = false
position = Vector2( 1.1, -2 )
enabled = true
cast_to = Vector2( 2, 0 )
collide_with_areas = true

[node name="RayPlayerBack" type="RayCast2D" parent="Rotate"]
visible = false
position = Vector2( 6, -2 )
enabled = true
cast_to = Vector2( -90, 0 )
collision_mask = 2
collide_with_areas = true
__meta__ = {
"_edit_lock_": true
}

[node name="RayPlayerFront" type="RayCast2D" parent="Rotate"]
visible = false
position = Vector2( 3, -2 )
enabled = true
cast_to = Vector2( 15, 0 )
collision_mask = 8
collide_with_areas = true
__meta__ = {
"_edit_lock_": true
}

[node name="RayGround" type="RayCast2D" parent="Rotate"]
visible = false
enabled = true
cast_to = Vector2( 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Animation" type="AnimationPlayer" parent="."]
anims/Dead = SubResource( 2 )
anims/Patrol = SubResource( 3 )

[node name="States" type="Node" parent="."]

[node name="Patrol" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Hit" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="ProcessHit" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Dead" type="Node" parent="States"]
script = ExtResource( 1 )

[node name="Search" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="Attack" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="AOSBox" type="Area2D" parent="."]
position = Vector2( 0, 10 )
collision_layer = 8
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="AOSCollision" type="CollisionShape2D" parent="AOSBox"]
position = Vector2( 0, -9.8 )
rotation = 1.5708
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="JumpBox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="JumpCollision" type="CollisionShape2D" parent="JumpBox"]
position = Vector2( 0, -4 )
shape = SubResource( 5 )
one_way_collision = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="HitCollision" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -3.3 )
rotation = 1.5708
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
margin_left = -2.10403
margin_top = -7.59821
margin_right = -2.10403
margin_bottom = -7.59821
rect_scale = Vector2( 0.02, 0.02 )
[connection signal="body_entered" from="AOSBox" to="." method="_on_AOSBox_body_entered"]
[connection signal="body_exited" from="AOSBox" to="." method="_on_AOSBox_body_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
